Fix banner overlapping content

--- a/src/app/components/App.scss
+++ b/src/app/components/App.scss
@@ -4,7 +4,7 @@
 }
 
 .App__content {
-  margin-top: 1rem;
+  margin-top: 5.58rem;
 }
 
 .welcomeWrapper {
